[gd_scene load_steps=1 format=3]

[ext_resource path="res://godot_project/Menu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
rect_position = Vector2(240, 120)
rect_min_size = Vector2(320, 200)

[node name="ContinueButton" type="Button" parent="VBox"]
text = "Fortsetzen"
rect_min_size = Vector2(300, 50)

[node name="NewGameButton" type="Button" parent="VBox"]
text = "Neues Spiel"
rect_min_size = Vector2(300, 50)

[node name="OptionsButton" type="Button" parent="VBox"]
text = "Options"
rect_min_size = Vector2(300, 50)

[node name="OptionsPanel" type="Panel" parent="."]
rect_position = Vector2(240, 340)
rect_min_size = Vector2(320, 120)
visible = false

[node name="OptVBox" type="VBoxContainer" parent="OptionsPanel"]
rect_min_size = Vector2(300, 100)

[node name="LangLabel" type="Label" parent="OptVBox"]
text = "Language"

[node name="LangOption" type="OptionButton" parent="OptVBox"]
items = ["Deutsch","English"]

[node name="OptClose" type="Button" parent="OptVBox"]
text = "Close"
rect_min_size = Vector2(80, 30)

[node name="QuitButton" type="Button" parent="VBox"]
text = "Ende"
rect_min_size = Vector2(300, 50)
